option('mri_version', type: 'string', value: '1.8', description: 'Version of MRI to link with')
option('mri_includes', type: 'string', value: '', description: 'Ruby manual include path')
option('mri_libpath', type: 'string', value: '', description: 'Ruby manual lib path')
option('mri_library', type: 'string', value: '', description: 'Ruby manual link name')

option('console', type: 'boolean', value: false, description: 'Whether to debug information in the console')
option('macos_min_version', type: 'string', value: '', description: 'Minimum macOS system version to support (does not affect dependencies)')
option('force32', type: 'boolean', value: false, description: 'Force compiler to build a 32-bit executable')

option('shared_fluid', type: 'boolean', value: false, description: 'Dynamically link fluidsynth at build time')
option('cjk_fallback_font', type: 'boolean', value: false, description: 'Use WenQuanYi Micro Hei as the fallback font')
option('use_miniffi', type: 'boolean', value: true, description: 'Enable MiniFFI Ruby module (Win32API)')
option('easypoke', type: 'boolean', value: false, description: '"Fix" any incompatibilities with Pkmn Essentials.')
option('default_framerate', type: 'boolean', value: false, description: 'Disable syncToRefreshrate and fixedFramerate configuration options')
option('no_preload_scripts', type: 'boolean', value: false, description: 'Disable the preloadScript configuration option')
option('workdir_current', type: 'boolean', value: false, description: 'Keep current directory on startup')

option('static_executable', type: 'boolean', value: false, description: 'Build a static executable (Windows-only)')
option('appimagekit_path', type: 'string', value: '', description: 'Path to AppImageKit, used for building AppImages')
option('appimage', type: 'boolean', value: false, description: 'Whether to install to an AppImage or just copy everything')
option('steamworks_path', type: 'string', value: '', description: 'Path to Steamshim')
option('steam_appid', type: 'string', value: '', description: 'Steam AppID. Set this to use SteamAPI_RestartAppIfNecessary')

option('gfx_backend', type: 'combo', value: 'gl', choices: ['gl', 'gles', 'metal'], description: 'Graphics rendering API to use. Metal is achieved through MetalANGLE.')

option('codesign', type: 'boolean', value: false, description: 'Whether to codesign the Mac app bundle upon creation. If codesign_identity is not set, signs for local use.')
option('codesign_identity', type: 'string', value: '', description: 'A valid Apple Developer ID for signing Mac apps.')