global_include_dirs += include_directories('.')
global_dependencies += dependency('AudioToolbox')

global_sources += files(
    'dr_flac.h',
    'dr_mp3.h',
    'SDL_sound_aiff.c',
    'SDL_sound_au.c',
    'SDL_sound_coreaudio.c',
    'SDL_sound_flac.c',
    'SDL_sound_internal.h',
    'SDL_sound_modplug.c',
    'SDL_sound_mp3.c',
    'SDL_sound_raw.c',
    'SDL_sound_shn.c',
    'SDL_sound_voc.c',
    'SDL_sound_vorbis.c',
    'SDL_sound_wav.c',
    'SDL_sound.c',
    'SDL_sound.h',
    'stb_vorbis.h'
)