binding_src = [
	'audio-binding.cpp',
	'binding-mruby.cpp',
	'binding-util.cpp',
	'bitmap-binding.cpp',
	'etc-binding.cpp',
	'font-binding.cpp',
	'graphics-binding.cpp',
	'input-binding.cpp',
	'module_rpg.c',
	'mrb-ext/file.cpp',
	'mrb-ext/kernel.cpp',
	'mrb-ext/marshal.cpp',
	'mrb-ext/rwmem.cpp',
	'mrb-ext/time.cpp',
	'plane-binding.cpp',
	'sprite-binding.cpp',
	'table-binding.cpp',
	'tilemap-binding.cpp',
	'viewport-binding.cpp',
	'window-binding.cpp',
]

binding = static_library('binding',
	binding_src,
	include_directories : incdirs)

error('mruby support is not yet implemented in meson')
